traefik-deploy/traefik-eg/my-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
spec:
  selector:
    run: my-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
