traefik-deploy/traefik-eg/my-nginx2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-nginx2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx2
        app: my-nginx2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx2
spec:
  selector:
    run: my-nginx2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
