traefik-deploy/traefik-eg/traefik-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: traefik-nginx
        app: traefik-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-nginx
spec:
  selector:
    run: traefik-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
