traefik-deploy/traefik-eg/traefik-eg.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules:
  - host: traefik.nginx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
#  - host: traefik2.nginx.io
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: nginx-ds
#          servicePort: 80
