traefik-deploy/traefik-eg/traefik-rules.yaml
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: traefik-ingress
#spec:
#  rules:
#  - host: traefik.nginx.io
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: my-nginx
#          servicePort: 80

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  backend:
    serviceName: traefik-nginx
    servicePort: 80

  rules:
  - host: traefik.nginx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80


  - host: traefik2.nginx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx2
          servicePort: 80
